# data-repo

./: .gitignore  Cargo.toml
backend/: Cargo.toml
backend/migrations/2024-01-14-173006_create_datasets/: down.sql  up.sql
backend/migrations/2024-01-18-081111_create_ds_shards/: down.sql  up.sql
backend/migrations/2024-01-18-090117_create_ds_shard_ver_orders/: down.sql  up.sql
backend/migrations/2024-01-18-134305_create_users/: down.sql  up.sql
backend/migrations/2024-01-20-183947_create_ds_items/: down.sql  up.sql
backend/src/: error.rs  lib.rs  logger.rs  main.rs  server.rs
backend/src/domain/models/: dataset.rs  dataset_item.rs  dataset_shard.rs  datasets.rs  ds_item.rs  ds_item_anno.rs  ds_shard.rs  ds_shard_ver_orders.rs  ds_shards.rs  group.rs  group_perm.rs  mod.rs  permission.rs  user.rs  user_group.rs
backend/src/infra/db/: schema.rs
backend/src/infra/repositories/: dataset_repository.rs  ds_shard_ver_order_repository.rs  ds_shards_repository.rs  error.rs  mod.rs
backend/src/infra/repositories/dataset/: create.rs  delete.rs  mod.rs  read.rs  schema.rs  update.rs
backend/src/infra/repositories/dataset_item_rel/: create.rs  delete.rs  mod.rs  read.rs  schema.rs
backend/src/infra/repositories/dataset_shard_rel/: create.rs  delete.rs  mod.rs  read.rs  schema.rs
backend/src/infra/repositories/ds_item/: create.rs  delete.rs  mod.rs  read.rs  schema.rs  update.rs
backend/src/infra/repositories/ds_item_anno/: create.rs  delete.rs  mod.rs  read.rs  schema.rs  update.rs
backend/src/infra/repositories/ds_shard/: create.rs  delete.rs  mod.rs  read.rs  schema.rs  update.rs
backend/src/infra/repositories/group/: create.rs  delete.rs  mod.rs  read.rs  schema.rs  update.rs
backend/src/infra/repositories/group_permission/: create.rs  delete.rs  mod.rs  read.rs  schema.rs
backend/src/infra/repositories/group_permission_rel/: create.rs  delete.rs  read.rs  schema.rs
backend/src/infra/repositories/permission/: create.rs  delete.rs  mod.rs  read.rs  schema.rs  update.rs
backend/src/infra/repositories/user/: create.rs  delete.rs  group.rs  mod.rs  permission.rs  read.rs  schema.rs  update.rs
backend/src/infra/repositories/user_group/: create.rs  delete.rs  read.rs  schema.rs
backend/src/infra/repositories/user_group_rel/: create.rs  delete.rs  mod.rs  read.rs  schema.rs
backend/src/middlewares/: auth.rs
backend/src/routes/: datasets.rs  ds_shard_ver_orders.rs  ds_shards.rs  mod.rs
backend/src/routes/auth/: error.rs  login.rs  logout.rs  mod.rs
backend/src/routes/datasets/: create.rs  delete.rs  error.rs  get.rs  list.rs  mod.rs  schema.rs  update.rs
backend/src/routes/datasets/items/: create.rs  delete.rs  error.rs  get.rs  list.rs  mod.rs  schema.rs  update.rs
backend/src/routes/datasets/shards/: create.rs  delete.rs  error.rs  get.rs  list.rs  mod.rs  schema.rs  update.rs
backend/src/routes/groups/: create.rs  delete.rs  error.rs  get.rs  list.rs  mod.rs  schema.rs
backend/src/routes/permissions/: create.rs  delete.rs  error.rs  get.rs  list.rs  mod.rs  schema.rs
backend/src/routes/users/: activate.rs  create.rs  delete.rs  error.rs  get.rs  group.rs  list.rs  mod.rs  permission.rs  schema.rs  update.rs
backend/src/services/: auth.rs  mod.rs
backend/src/utils/extractors/: json.rs  path.rs  user.rs
frontend/: package.json
frontend/config/: config.dev.ts  config.ts  defaultSettings.ts  routes.ts
frontend/src/: access.ts  app.tsx  manifest.json  requestErrorConfig.ts  service-worker.js  typings.d.ts
frontend/src/components/Footer/: index.tsx
frontend/src/components/RightContent/: AvatarDropdown.tsx  index.tsx
frontend/src/locales/zh-CN/: menu.ts  pages.ts
frontend/src/pages/: Welcome.tsx
frontend/src/pages/Login/: index.tsx
frontend/src/pages/User/GroupList/: index.tsx
frontend/src/pages/User/PermissionList/: index.tsx
frontend/src/pages/User/UserList/: index.tsx
frontend/src/pages/User/UserList/components/: UpdateForm.tsx
frontend/src/services/ant-design-pro/: api.ts  typings.d.ts
frontend/src/services/swagger/: user.ts
scripts/: init.sql
