[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["json"] }
axum-macros = "0.4.1"
axum-tracing-opentelemetry = "0.16.0"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.16", features = ["derive", "env"] }
deadpool-diesel = { version = "0.5.0", features = ["postgres"] }
diesel = { version = "2.1.4", features = ["postgres", "serde_json", "chrono"] }
diesel_migrations = "2.1.0"
init-tracing-opentelemetry = { version = "0.16.0", features = ["opentelemetry-otlp"] }
opentelemetry = "0.21.0"
opentelemetry-otlp = "0.14.0"
opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio"] }
serde = "1.0.195"
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5.0", features = ["cors"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
